--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
 <body>
 
     <div>
-        Hello
+        <h1 center>
+            Plivo-Web-Component
+        </h1>
+        <hr>
     </div>
-    <!-- Using Custom Elements -->
-    <plivo-web userid="username" password="password"></plivo-web>
+    <div flex layout horizontal style="padding:10px">
+        <div flex three></div>
+        <!-- Using Custom Elements -->
+        <plivo-web userid="" password=""></plivo-web>
+        <div flex three></div>
+    </div>
 
 </body>
 
